--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "angular-fontselect",
-  "version": "0.13.4",
-  "description": "A fontselect directive for AngularJS",
-  "homepage": "https://github.com/Jimdo/angular-fontselect",
+  "version": "1.0.0",
+  "description": "Fork repository for jdFontSelect created by Jimdo GmbH",
+  "homepage": "https://github.com/Wisboo/angular-fontselect",
   "author": "Jimdo GmbH",
   "main": "dist/angular-fontselect.js",
   "maintainers": [
@@ -32,17 +32,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jimdo/angular-fontselect.git"
+    "url": "https://github.com/Wisboo/angular-fontselect"
   },
   "license": "MIT",
   "devDependencies": {
-    "angular": "1.4.1",
-    "bower": "^1.7.7",
-    "grunt": "^0.4.5",
-    "grunt-angular-toolbox": "^2.1.2",
-    "grunt-cli": "^0.1.13"
+    "angular": ">=1.5.8",
+    "bower": "^1.8.4",
+    "grunt": "^1.0.3",
+    "grunt-cli": "^1.3.2"
   },
   "peerDependencies": {
-    "angular": "^1.2.25 <= 1.4.1"
+    "angular": ">=1.5.8"
   }
 }
