--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   ],
   "scripts": {
     "test": "grunt test",
-    "setup": "bower install && grunt build"
+    "setup": "bower install && grunt build",
+    "build": "rollup -c rollup.prod.js"
   },
   "repository": {
     "type": "git",
@@ -36,12 +37,18 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "angular": ">=1.5.8",
-    "bower": "^1.8.4",
-    "grunt": "^1.0.3",
-    "grunt-cli": "^1.3.2"
+    "rollup": "^1.1.2",
+    "rollup-plugin-bundle-html": "^0.1.4",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-html": "^0.2.1",
+    "rollup-plugin-less": "^0.1.5",
+    "rollup-plugin-node-resolve": "^4.0.0"
+  },
+  "dependencies": {
+    "lesshat": "^4.1.0",
+    "webfontloader": "^1.6.28"
   },
   "peerDependencies": {
-    "angular": ">=1.5.8"
+    "angular": ">=1.6.8"
   }
 }
